--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "markdown": "^0.5.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-loading": "^2.0.3",
     "vega-embed": "~3.0.0"
   },
   "scripts": {
